fix: align frontend with the backend updates
