# packages/openapi-specification/openapi.yaml
@@ -374,7 +374,7 @@ components:
           description: The time at the start of the last execution of this website crawl
           type: string
           format: date-time
-        executionStatus:
+        status:
           description: The status of the last execution of this website crawl
           type: string
           enum:
@@ -382,25 +382,12 @@ components:
             - ongoing
             - failed
             - waiting
-        nodes:
-          description: The map of crawled pages as a graph
-          type: array
-          items:
-            type: object
-            required:
-              - url
-              - links
-            properties:
-              url:
-                type: string
-              title:
-                type: string
-              crawlTime:
-                type: string
-                format: date-time
-              links:
-                description: List of Ids of pages that are hyperlinked from this page.
-                type: array
-                items:
-                  type: integer
-                  format: int64
+        record:
+          description: The record of the website crawl
+          type: object
+          properties:
+            label:
+              type: string
+            id:
+              type: integer
+              format: int64
